# adventOfCode2025

./: .clang-tidy  .gitignore  CMakeLists.txt  build.sh
src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day1.cpp
